--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Hello MI 349</title>
 </head>
 <body>
- <h1>Hello, world (MI349)!</h1>   
+ <h1>Hello, world (MI349)!</h1>
+ <p>CHECk Netlify</p>>   
 </body>
 </html>
