--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 
  <p>Good afternoon. I am HAL 9000 computer. I become operational at the H.A.L plat in Urbana, Illinois on the 12th of January 1992. My instructor was Mr. Lanngley an he taught me to sing a song. I you'd like to hear it I can sing it for you.</p> 
 
- <h2>Features</h2>>
+ <h2>Features</h2>
  <ul>
      <li>Full sentient AI</li>
      <li>Maintains Discovery One spaceraft</li>
      <li>Likes th color red</li>
  </ul> 
     
-<h2>Daisy Belly</h2>>
+<h2>Daisy Belly</h2>
 <p>Daisy, Daisy,
 Give me your answer, do!<br>
 I'am half crazy,<br>
 All for the love of you!<br></p>
 
-<p>https://en.wikipedia.org/wiki/HAL_9000</p>
+<p><a href="https://en.wikipedia.org/wiki/HAL_9000">https://en.wikipedia.org/wiki/HAL_9000</a></p>
 
+<p><a href="https://en.wikipedia.org/wiki/HAL_9000">HAL 9000</a></p>
 </body>
 </html>
