Update html and HAL 9000 image

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>Hello，Dave!</title>
 </head>
 <body>
- <h1>Hello World</h1>
+ <h1 id="hello" class="section-heading">Hello World</h1>
 
- <p>Good afternoon. I am HAL 9000 computer. I become operational at the H.A.L plat in Urbana, Illinois on the 12th of January 1992. My instructor was Mr. Lanngley an he taught me to sing a song. I you'd like to hear it I can sing it for you.</p> 
+ <p><img src="hal-9000.png" alt="HAL 9000 from 2001: A Space Odesey"></p>
 
- <h2>Features</h2>
- <ul>
+ <p>Good afternoon. I am <em>HAL 9000 computer</em>. I become operational at the H.A.L plat in <strong>Urbana, Illinois</strong> on the 12th of January 1992. My instructor was Mr. Lanngley an he taught me to sing a song. I you'd like to hear it I can sing it for you.</p> 
+
+ <h2 id="hello-features">Features</h2>
+ <ul class="burndown">
      <li>Full sentient AI</li>
      <li>Maintains Discovery One spaceraft</li>
      <li>Likes th color red</li>
@@ -23,7 +25,6 @@ Give me your answer, do!<br>
 I'am half crazy,<br>
 All for the love of you!<br></p>
 
-<p><a href="https://en.wikipedia.org/wiki/HAL_9000">https://en.wikipedia.org/wiki/HAL_9000</a></p>
 
 <p><a href="https://en.wikipedia.org/wiki/HAL_9000">HAL 9000</a></p>
 </body>
